fix: body font legibility and flex atomics

--- a/src/styles/typography/TypeCaption.sass
+++ b/src/styles/typography/TypeCaption.sass
@@ -1,6 +1,6 @@
 :root
   --cyan-font-family-caption: var(--cyan-text-font-family)
-  --cyan-font-size-caption: 13px
+  --cyan-font-size-caption: 12px
   --cyan-font-weight-caption: normal
   --cyan-line-height-caption: 24px
   --cyan-letter-spacing-caption: 0.4px
